--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Learning Website</h1>
+        <h1>Welcome to Our MinorProject Site</h1>
     </header>
 
     <div class="video-container">
