--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our MinorProject Site</h1>
+        <h1>Welcome to our doubt resolving software "DoubtDrill"
+</h1>
     </header>
 
     <div class="video-container">
