--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to our doubt resolving software "DoubtDrill"
-</h1>
+        <h1>Welcome to our doubt resolving software "DoubtDrill"</h1>
     </header>
 
     <div class="video-container">
