--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
             
         }
         h2 {
+            text-align: center;
             font-style: oblique;
             font-weight:1000;
             font-size: 30px;
-            display: -webkit-flex;
             justify-content: center;
-            padding: 10px;
+            display: inline-block;
             background-color: aqua;
+            padding: 10px;
             border-radius: 200px;
-            border-top-left-radius: 10px;
+            
         }
         div {
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
