--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <h1>Dou-bTd-rill</h1>
+        <h1>Dou bTd rill</h1>
         <!-- <img src=""C:\Users\hp\OneDrive\Desktop\logo website.png"" alt="logo website"> -->
     </header>
    
