--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
 </head>
 <body>
     <header>
-        <h1>Dou bTd rill</h1>
-        <!-- <img src=""C:\Users\hp\OneDrive\Desktop\logo website.png"" alt="logo website"> -->
-    </header>
-   
+        <img src="C:\Users\hp\OneDrive\Desktop\doubtdrill.png" alt="logo">
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
