--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\hp\OneDrive\Desktop\doubtdrill.png" alt="logo">
+        <h1> Dou bTd drill
+        </h1>
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
