--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 </head>
 <body>
     <header>
-        <h1> Dou bTd drill
-        </h1>
+        ![Alt Text](https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true)
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
