--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         
         header {
-            background-color: hsl(203, 83%, 49%);
+/*             background-color: hsl(203, 83%, 49%); */
             color: hsl(86, 83%, 49%);
             text-align: center;
             padding: 0px;
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        ![Alt Text](https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true)
+    <img src= " https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true" alt="logo"></image>
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
