--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         }
         
         header {
-/*             background-color: hsl(203, 83%, 49%); */
-            color: hsl(86, 83%, 49%);
+/*            display: inline-block;
+            color: hsl(0, 0%, 0%);
             text-align: center;
             padding: 0px;
         }
