--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +15,7 @@
         }
         
         header {
-/*            display: inline-block;
+            display: inline-block;
             color: hsl(0, 0%, 0%);
             text-align: center;
             padding: 0px;
@@ -23,7 +24,7 @@
         h1 {
             font-family:'Bauhaus 93', Courier;
             font-size: 40px;
-            color: bisque;
+            color: rgb(4, 7, 1);
             
         }
         h2 {
@@ -41,6 +42,7 @@
         div {
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 20px;
+
         }
         t{
             text-align: center;
@@ -64,7 +66,7 @@
 </head>
 <body>
     <header>
-    <img src= " https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true" alt="logo"></image>
+    <img class='imagecontainer' src= " https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true" alt="logo"></img>
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
@@ -148,7 +150,7 @@
 
 </p>
 
-Discover the advantages of our doubtesolving software and empower yourself with a tool designed to enhance your learning and decision-making experiences.<br>
+Discover the advantages of our doubtesolving software and empower yourself with a tool designed to enhance your learning and decision-making experiences.<br>
 <p>
 
 </p>
