--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         }
         
         header {
-            color: hsl(0, 0%, 0%);
-            text-align: center;
-            padding: 0px;
+            header{
+            color:black;
+            background-color: black;
         }
-        
         h1 {
             font-family:'Bauhaus 93', Courier;
             font-size: 40px;
@@ -66,6 +65,7 @@
     <header>
     <img class='imagecontainer' src= " https://github.com/sinnilay/minor_project/blob/master/doubt.jpg?raw=true" alt="logo"></img>
         <br>
+    </header>
         <h2>
             Welcome to Doubtdrill – Your Ultimate Destination for Doubt Resolution!<br></h2>
 
