--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             color:black;
             background-color: black;
         }
+        img{
+            position: relative;
+            left: 30%;
+        }
         h1 {
             font-family:'Bauhaus 93', Courier;
             font-size: 40px;
