--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: rgb(245, 224, 65);
+            text-align:center;
         }
         
         header {
@@ -19,7 +20,7 @@
         }
         img{
             position: relative;
-            left: 30%;
+            left: 1%;
         }
         h1 {
             font-family:'Bauhaus 93', Courier;
