--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: rgb(245, 224, 65);
+            background-color:  #f7b42e;
             text-align:center;
         }
         
@@ -35,7 +35,7 @@
             font-size: 30px;
             justify-content: center;
             display: inline-block;
-            background-color: aqua;
+            background-color: rgb(223, 240, 240);
             padding: 10px;
             border-radius: 200px;
             
