--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 
           
         }
+        .btn:hover{
+            background-color: brown;
+            color: white;
+            
+        }
 
         h6{
             display: none;
