--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Discover the advantages of our doubtesolving software and empower yourself with 
 </t>
     <br>
 <br>
-<a href="https://1drv.ms/p/s!AlTNsCwa6QPtgUVy0xVs0lmUCVqX?e=3psTe6"><button class="btn">KNOW MORE ABOUT THIS</button></a>
+<a href="https://1drv.ms/p/s!AlTNsCwa6QPtgUVy0xVs0lmUCVqX?e=3psTe6"><button class="btn">USERS GUIDE</button></a>
 <br>
 <br>
 <br>
